using HINTING_FULL by default in headless builds, added command line parameter to override it

These changes fix font rendering differences between headless and
non-headless runs on linux. Default font hinting is HINTING_MEDIUM,
which leads to usage of subpixel glyphs positioning in Skia. But in
desktop environment hinting eventually resolves to HINTING_FULL and we
get slightly different font rendering as a result and no option to
control it using command line flags.

In this commit --font-render-hinting is added as a new command line
parameter for headless runs with HINTING_FULL as a default value

R=dvallet@chromium.org, skyostil@google.com

Bug: 744577
Change-Id: Iffac55899a7ac98c418d9ee5b4af961017cfb09a