headless/app/headless_shell_switches.h
@@ -33,6 +33,7 @@ extern const char kUserDataDir[];
 extern const char kVirtualTimeBudget[];
 extern const char kWindowSize[];
 extern const char kAuthServerWhitelist[];
+extern const char kFontRenderHinting[];
 
 // Switches which are replicated from content.
 using ::switches::kRemoteDebuggingPort;
